--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/colorGreyBtn</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -28,7 +29,7 @@
         <item name="colorControlHighlight">@color/colorDangerDark</item>
     </style>
 
-    <style name="MonthPickerDialogStyle" >
+    <style name="MonthPickerDialogStyle">
         <item name="monthBgColor">@color/colorWhite</item>
         <item name="monthBgSelectedColor">@color/colorBlue</item>
         <item name="monthFontColorSelected">@color/colorBlue</item>
