--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
-       android:background="#ffffff"
+       android:background="@color/colorWhite"
        app:itemIconTint="@drawable/item_selected_nav_bottom"
        app:itemTextColor="@drawable/item_selected_nav_bottom"
        tools:ignore="MissingConstraints">
