--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:background="@color/colorHome"
     android:orientation="vertical"
     tools:context=".ui.home.Home">
@@ -156,7 +156,9 @@
                 android:id="@+id/adMenuRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="@dimen/_6sdp"></androidx.recyclerview.widget.RecyclerView>
+                android:padding="@dimen/_6sdp">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
         </LinearLayout>
 
