manuka - my orders

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
     <FrameLayout
         android:id="@+id/navContainer"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/space"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.505"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
     <com.irfaan008.irbottomnavigation.SpaceNavigationView
@@ -33,10 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        app:active_item_color="@color/colorAccent"
-        app:centre_button_color="@color/centre_button_color"
-        app:inactive_item_color="@color/colorWhite"
-        app:space_background_color="@color/colorPrimary"
         app:layout_behavior="@string/space_scrolling_view_behavior"
         app:centre_button_icon="@drawable/icon_plus_upsbrown_24"
         app:space_item_icon_size="@dimen/space_item_icon_default_size"
