--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
                         android:text="@string/menu_location"
                         android:textAllCaps="false"
                         android:textColor="@color/colorBlackText"
-                        android:textSize="@dimen/_12sdp" />
+                        android:textSize="@dimen/_13sdp" />
 
 
                     <TextView
@@ -60,21 +60,21 @@
 
                     <Button
                         android:id="@+id/category_picker"
-                        android:maxLines="1"
-                        android:ellipsize="end"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@color/colorWhite"
                         android:drawableStart="@drawable/ic_baseline_label_24"
+                        android:ellipsize="end"
                         android:fontFamily="serif"
+                        android:maxLines="1"
                         android:paddingStart="@dimen/_16sdp"
                         android:paddingEnd="@dimen/_16sdp"
                         android:text="@string/menu_category"
                         android:textAllCaps="false"
                         android:textColor="@color/colorBlackText"
-                        android:textSize="@dimen/_12sdp" />
+                        android:textSize="@dimen/_13sdp" />
 
                     <TextView
                         android:layout_width="@dimen/_1sdp"
@@ -110,8 +110,8 @@
 
                 <ImageView
                     android:id="@+id/doorstep"
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_18sdp"
+                    android:layout_width="@dimen/_120sdp"
+                    android:layout_height="@dimen/_20sdp"
                     android:layout_centerVertical="true"
                     android:adjustViewBounds="true"
                     android:scaleType="centerInside"
@@ -119,7 +119,7 @@
 
                 <ImageView
                     android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_18sdp"
+                    android:layout_height="@dimen/_20sdp"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/_2sdp"
                     android:layout_toRightOf="@+id/doorstep"
@@ -157,9 +157,7 @@
                 android:id="@+id/adMenuRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_6sdp">
-
-            </androidx.recyclerview.widget.RecyclerView>
+                android:padding="@dimen/_6sdp" />
 
         </LinearLayout>
 
