--- a/app/src/main/res/layout/manuka_fragment_login_register.xml
+++ b/app/src/main/res/layout/manuka_fragment_login_register.xml
@@ -20,7 +20,7 @@
             android:layout_marginBottom="20dp"
             android:gravity="center"
             android:textColor="@color/colorBlackText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/_16sdp" />
 
         <Button
             android:id="@+id/FB_login_button"
