--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -31,190 +31,212 @@
                 android:paddingStart="@dimen/_14sdp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
-                android:text=""
-                android:textSize="24sp"></TextView>
+                android:text="@string/loading"
+                android:textSize="@dimen/_20sdp" />
 
             <Button
                 android:id="@+id/linkfb"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_28sdp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:text="@string/loading"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_round_fb"
                 android:drawableLeft="@drawable/com_facebook_button_icon"
                 android:drawablePadding="@dimen/_6sdp"
-                android:textAllCaps="false"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/button_round_fb"
-                android:textSize="16sp"
+                android:gravity="center"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
-                android:gravity="center"
+                android:text="@string/loading"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_14sdp"
                 android:textStyle="bold" />
 
             <Button
                 android:id="@+id/myads"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:background="@color/colorWhite"
                 android:drawableStart="@drawable/ic_baseline_filter_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
+                android:drawablePadding="@dimen/_16sdp"
+                android:drawableTint="#8C8C8C"
+                android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_myads"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+                android:textSize="@dimen/_14sdp" />
+
+            <Button
+                android:id="@+id/myChats"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:background="@color/colorWhite"
+                android:drawableStart="@drawable/ic_baseline_chat_24"
+                android:drawablePadding="@dimen/_16sdp"
+                android:drawableTint="#8C8C8C"
+                android:elevation="@dimen/_2sdp"
+                android:fontFamily="@font/droid_sans"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingEnd="@dimen/_6sdp"
+                android:text="My chats"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
+                android:textSize="@dimen/_14sdp" />
 
             <Button
                 android:id="@+id/accountMember"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:background="@color/colorWhite"
                 android:drawableStart="@drawable/ic_baseline_event_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
+                android:drawablePadding="@dimen/_16sdp"
+                android:drawableTint="#8C8C8C"
+                android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_membership"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+                android:textSize="@dimen/_14sdp" />
 
             <Button
                 android:id="@+id/favourite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:background="@color/colorWhite"
                 android:drawableStart="@drawable/ic_baseline_star_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
+                android:drawablePadding="@dimen/_16sdp"
+                android:drawableTint="#8C8C8C"
+                android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_fav"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+                android:textSize="@dimen/_14sdp" />
 
             <Button
                 android:id="@+id/myprofile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="6dp"
-                android:background="#ffffff"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_6sdp"
+                android:background="@color/colorWhite"
                 android:drawableStart="@drawable/ic_baseline_person_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
+                android:drawablePadding="@dimen/_16sdp"
+                android:drawableTint="#8C8C8C"
+                android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_profile"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+                android:textSize="@dimen/_14sdp" />
 
         </LinearLayout>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
-                android:drawableStart="@drawable/ic_baseline_verified_user_24"
-                android:drawablePadding="20dp"
-                android:drawableTint="#a6a6a6"
-                android:elevation="4dp"
-                android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="@string/account_safe"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                tools:targetApi="m"></Button>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:background="@color/colorWhite"
+            android:drawableStart="@drawable/ic_baseline_verified_user_24"
+            android:drawablePadding="@dimen/_16sdp"
+            android:drawableTint="#8C8C8C"
+            android:elevation="@dimen/_2sdp"
+            android:fontFamily="@font/droid_sans"
+            android:paddingStart="@dimen/_6sdp"
+            android:paddingEnd="@dimen/_6sdp"
+            android:text="@string/account_safe"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_14sdp" />
 
-            <Button
-                android:id="@+id/faq"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
-                android:drawableStart="@drawable/ic_baseline_battery_unknown_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
-                android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="@string/account_faq"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+        <Button
+            android:id="@+id/faq"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:background="@color/colorWhite"
+            android:drawableStart="@drawable/ic_baseline_battery_unknown_24"
+            android:drawablePadding="@dimen/_16sdp"
+            android:drawableTint="#8C8C8C"
+            android:elevation="@dimen/_2sdp"
+            android:fontFamily="@font/droid_sans"
+            android:paddingStart="@dimen/_6sdp"
+            android:paddingEnd="@dimen/_6sdp"
+            android:text="@string/account_faq"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_14sdp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
-                android:drawableStart="@drawable/ic_baseline_slideshow_24"
-                android:drawablePadding="20dp"
-                android:drawableTint="#a6a6a6"
-                android:elevation="4dp"
-                android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="@string/account_howto"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                tools:targetApi="m"></Button>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:background="@color/colorWhite"
+            android:drawableStart="@drawable/ic_baseline_slideshow_24"
+            android:drawablePadding="@dimen/_16sdp"
+            android:drawableTint="#8C8C8C"
+            android:elevation="@dimen/_2sdp"
+            android:fontFamily="@font/droid_sans"
+            android:paddingStart="@dimen/_6sdp"
+            android:paddingEnd="@dimen/_6sdp"
+            android:text="@string/account_howto"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_14sdp" />
 
-            <Button
-                android:id="@+id/donateUs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:background="#ffffff"
-                android:drawableStart="@drawable/ic_baseline_double_arrow_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
-                android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="@string/account_donate"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+        <Button
+            android:id="@+id/donateUs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:background="@color/colorWhite"
+            android:drawableStart="@drawable/ic_baseline_double_arrow_24"
+            android:drawablePadding="@dimen/_16sdp"
+            android:drawableTint="#8C8C8C"
+            android:elevation="@dimen/_2sdp"
+            android:fontFamily="@font/droid_sans"
+            android:paddingStart="@dimen/_6sdp"
+            android:paddingEnd="@dimen/_6sdp"
+            android:text="@string/account_donate"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_14sdp" />
 
-            <Button
-                android:id="@+id/logout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="68dp"
-                android:background="#ffffff"
-                android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
-                android:drawablePadding="20dp"
-                android:elevation="4dp"
-                android:fontFamily="@font/droid_sans"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="@string/account_logout"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp"></Button>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_40sdp"
+            android:background="@color/colorWhite"
+            android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
+            android:drawablePadding="@dimen/_16sdp"
+            android:drawableTint="#8C8C8C"
+            android:elevation="@dimen/_2sdp"
+            android:fontFamily="@font/droid_sans"
+            android:paddingStart="@dimen/_6sdp"
+            android:paddingEnd="@dimen/_6sdp"
+            android:text="@string/account_logout"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_14sdp" />
 
         <FrameLayout
             android:id="@+id/snackView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
