--- a/app/src/main/res/layout/manuka_activity_myadds.xml
+++ b/app/src/main/res/layout/manuka_activity_myadds.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#e6ecff"
     android:layout_height="match_parent"
+    android:background="#e6ecff"
     android:orientation="vertical"
     tools:context=".ui.advertisement.Myadds">
 
     <!-- Manuka -->
 
-    <include layout="@layout/toolbar"
+    <include
         android:id="@+id/toolbar"
-        ></include>
+        layout="@layout/toolbar"></include>
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshMyadds"
